# hm-python

./: .gitignore  noxfile.py  pyproject.toml
hm_python/: console.py
hm_python.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_console.py  test_hm_python.py
