[tool.poetry]
name = "hm-python"
version = "0.1.0"
description = "hypermodern python guide"
authors = ["renantamashiro <tamashirorenan@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["hypermodern"]
repository = "https://github.com/renantamashiro/hm-python"


[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.10.0"
pytest-mock = "^3.1.1"

[tool.poetry.scripts]
hm-python = "hm_python.console:main"

[tool.coverage.paths]
source = ["hm_python", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hm_python"]

[tool.coverage.report]
show_missing = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

